--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="links">
                     <div class="link">
                         <img src="./images/steam.png" alt="Twitch">
-                        <h2>Streams</h2>
+                        <h2>Games</h2>
                     </div>
                     <div class="link">
                         <img src="./images/twitch.png" alt="Twitch">
