--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="link">
                         <img src="./images/twitch.png" alt="Twitch">
-                        <h2>Games</h2>
+                        <h2>Streams</h2>
                     </div>
                     <div class="link">
                         <img src="./images/upcoming.png" alt="New">
